# Flam_assignement

./: .gitignore  CMakeLists.txt  Hashmap.cpp_Q1  LRU.cpp  LRU_Q1.cpp  README.md
shaders/: sun.frag  triangle.frag  triangle.vert
src/: glad.c  main.cpp
